Separated backend and frontend folders in the same repository for easy of share

--- a/back/package.json
+++ b/back/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "opens-assignment",
+  "name": "opens-assignment-backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
